--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
   "author": "acidd3 <acidd3@mail.ru>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack-dev-server --env development",
+    "build": "webpack --env production",
+    "serv": "static build"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "node-static": "^0.7.11",
     "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "css-loader": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-loader": "^0.6.0",
     "pug": "^2.0.3",
-    "pug-loader": "^2.4.0"
+    "pug-loader": "^2.4.0",
+    "sass-loader": "^7.1.0"
   }
 }
