--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
     "node-static": "^0.7.11",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14",
@@ -22,6 +24,7 @@
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-loader": "^0.6.0",
+    "normalize.css": "^8.0.1",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.1.0"
