--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serv": "static build"
   },
   "devDependencies": {
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "node-static": "^0.7.11",
@@ -24,6 +25,7 @@
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-loader": "^0.6.0",
+    "normalize-css": "^2.3.1",
     "normalize.css": "^8.0.1",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
